[package]
name = "clrt"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cl3 = { version = "0.10", default-features = false, features = [
    "CL_VERSION_2_0",
] }
half = "2.4"
